src/objects/Lookup_Filter__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>This is to provide custom filetrs for lookup field</description>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>Field Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filter_Value__c</fullName>
        <description>Record Type Name</description>
        <label>Filter Value</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>Object Api Name</description>
        <label>Object Name</label>
        <length>120</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Lookup Filter</label>
</CustomObject>